@@ -377,6 +377,17 @@ extern void *realloc(void *__ptr, size_t __size) __ATTR_MALLOC__;
 
 extern double strtod(const char *__nptr, char **__endptr);
 
+/**
+     The atof() function converts the initial portion of the string pointed
+     to by \c nptr to double representation.
+
+     It is equivalent to calling
+
+     <tt>strtod(nptr, (char **)NULL);</tt>
+ */
+
+extern double atof(const char *__nptr);
+
 /** Highest number that can be generated by rand(). */
 #define	RAND_MAX 0x7FFF
 
@@ -613,7 +624,6 @@ extern char *dtostrf(double __val, char __width, char __prec, char *__s);
 
 #if 0  /* not yet implemented */
 extern int atexit(void (*)(void));
-extern double atof(const char *);
 extern void *realloc(void *, size_t);
 #endif
 
